--- a/package.json
+++ b/package.json
@@ -2,5 +2,20 @@
   "name": "typegraphql-relay",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "NOLICENSED",
+  "scripts": {
+    "setup:husky": "husky install",
+    "setup:git": "git config --local --add merge.ff false && git config --local --add pull.ff only",
+    "setup": "run-s 'setup:*'"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "devDependencies": {
+    "commitizen": "^4.2.5",
+    "husky": "^8.0.2",
+    "npm-run-all": "^4.1.5"
+  }
 }
