--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -6,6 +6,15 @@
     "migrate:gen": "prisma migrate dev --create-only"
   },
   "devDependencies": {
-    "prisma": "^4.6.1"
+    "@tsconfig/node18-strictest": "^1.0.0",
+    "prisma": "^4.6.1",
+    "typegraphql-prisma": "^0.22.2",
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@prisma/client": "4.6.1",
+    "class-validator": "^0.13.2",
+    "graphql": "^16.6.0",
+    "type-graphql": "^1.1.1"
   }
 }
