feat(frontend): switch to createRoot API from ReactDOM.render

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
     "asynciterable",
+    "autoincrement",
     "esbuild",
+    "nogrep",
     "NOLICENSED",
     "outfile",
     "typegraphql"
