--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
+    "react-router-dom": "^6.4.3",
     "relay-runtime": "^14.1.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "graphql": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "relay-compiler": "^14.1.0",
+    "type-fest": "^3.2.0",
     "typescript": "^4.9.3",
     "vite": "^3.2.4",
     "vite-plugin-relay": "^2.0.0",
