--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -11,7 +11,8 @@
       "~/*": ["src/*"],
     },
     "noEmit": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "moduleResolution": "node"
   },
   "include": ["src"],
   "exclude": ["node_modules"],
