--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "NOLICENSED",
   "scripts": {
+    "run:prettier": "prettier '**/*.{ts,tsx,js,cjs,mjs,json,md,yml}'",
+    "lint:prettier": "yarn run:prettier --check",
+    "fix:prettier": "yarn run:prettier --write",
+    "run:lint-staged": "yarn lint-staged",
     "setup:husky": "husky install",
     "setup:git": "git config --local --add merge.ff false && git config --local --add pull.ff only",
     "setup:packages": "yarn --cwd ./packages/backend && yarn --cwd ./packages/frontend",
@@ -17,6 +21,8 @@
   "devDependencies": {
     "commitizen": "^4.2.5",
     "husky": "^8.0.2",
-    "npm-run-all": "^4.1.5"
+    "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1"
   }
 }
