--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["es2018", "esnext.asynciterable"],
     "baseUrl": "./",
     "paths": {
-      "~/*": ["src/*"],
+      "~/*": ["src/*"]
     },
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -14,6 +14,6 @@
   "include": ["src"],
   "exclude": ["node_modules"],
   "ts-node": {
-    "swc": true,
+    "swc": true
   }
 }
